Finish registration in labrinth
